Nuevos cambios en historia 1 y 3, metodo eliminar falta validar con la BD los errores que presenta por parte de la base y llave foranea

--- a/AppOdontologia/AppOdontologia.csproj
+++ b/AppOdontologia/AppOdontologia.csproj
@@ -113,6 +113,7 @@
     <Compile Include="frmReporte.Designer.cs">
       <DependentUpon>frmReporte.cs</DependentUpon>
     </Compile>
+    <Compile Include="historia.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmAgregarHistoria1.resx">
